--- a/manuscript/supplemental_material.Rnw
+++ b/manuscript/supplemental_material.Rnw
@@ -128,8 +128,10 @@ library("tidyr")
 
 @ 
 
-<<source.to.latex,echo=FALSE,message=FALSE,results="hide",cache.extra=tools::md5sum(paste0("../common_r_code/",c("to_latex.R","plot_tree_matrix.R","utility_functions.R")))>>=
-for (a in paste0("../common_r_code/",c("to_latex.R","plot_tree_matrix.R","utility_functions.R"))) {
+<<source.to.latex,echo=FALSE,message=FALSE,results="hide",cache.extra=tools::md5sum(paste0("../common_r_code/",c("to_latex.R","plot_tree_matrix.R","utility_functions.R","plot_ancestral_state_tree.R")))>>=
+for (a in paste0("../common_r_code/",c("to_latex.R","plot_tree_matrix.R",
+                                       "utility_functions.R",
+                                       "plot_ancestral_state_tree.R"))) {
     source(a)
 }
 @ 
@@ -551,18 +553,13 @@ for (this.species in names(species.names)) {
 \begin{figure}[hb]
 <<crh.evolution.tree,echo=FALSE,out.height="0.6\\textheight",fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="CRH" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 min.fpkm=1,
-                 axis.text.size=5,
-                 axis.text.angle=0,
-                 fontsize=6.5
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="CRH" &
+                                                    species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.37))
 @ 
 \caption{\genetreeexplanation{\textit{CRH}}}
 \label{fig:crh_evolution_tree}
@@ -572,19 +569,14 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}[hb]
 <<adam12.evolution.tree,echo=FALSE,out.height="0.6\\textheight",fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="ADAM12" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,
-                 gene.tree.expression,
-                 subtree=c("ENSMODG00000010538","ENSSSCG00000010746"),
-                 min.fpkm=0.1,
-                 axis.text.size=4,
-                 fontsize=5
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="ADAM12" &
+                                                    species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                subtree=c("ENSMODG00000010538","ENSSSCG00000010746"),
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.25))
 @ 
 \caption{\genetreeexplanation{\textit{ADAM12}}}
 \label{fig:adam12_evolution_tree}
@@ -593,18 +585,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<kiss1.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="KISS1" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 min.fpkm=0.1,
-                 axis.text.size=5,
-                 axis.text.angle=0,
-                 fontsize=5
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="KISS1"
+                                                    & species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.7))
 @ 
 \caption{\genetreeexplanation[0.1]{\textit{KISS1}}}
 \label{fig:kiss1_evolution_tree}
@@ -613,19 +600,14 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<pappa.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="PAPPA" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 subtree=c("ENSSSCG00000005498","ENSG00000182752"),
-                 min.fpkm=0.1,
-                 axis.text.size=5,
-                 axis.text.angle=0,
-                 fontsize=5
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="PAPPA"
+                                                    & species=="homo sapiens"),
+                                subtree=c("ENSSSCG00000005498","ENSG00000182752"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.15))
 @ 
 \caption{\genetreeexplanation[0.1]{\textit{PAPPA}}}
 \label{fig:pappa_evolution_tree}
@@ -634,18 +616,14 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<tgfb1.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="TGFB1" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 subtree=c("ENSMODG00000008630","ENSSSCG00000026296"),
-                 gene.tree.table,gene.tree.expression,
-                 min.fpkm=1,
-                 axis.text.size=3.5,
-                 fontsize=5
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="TGFB1"
+                                                    & species=="homo sapiens"),
+                                subtree=c("ENSMODG00000008630","ENSSSCG00000026296"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.3))
 @ 
 \caption{\genetreeexplanation{\textit{TGFB1}}}
 \label{fig:tgfb1_evolution_tree}
@@ -655,19 +633,14 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<gpc3.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="GPC3" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,
-                 subtree=c("ENSCAFG00000018864","ENSLAFG00000025706"),
-                 gene.tree.expression,
-                 min.fpkm=1,
-                 axis.text.size=3.5,
-                 fontsize=6
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="GPC3"
+                                                    & species=="homo sapiens"),
+                                subtree=c("ENSCAFG00000018864","ENSLAFG00000025706"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.13))
 @ 
 \caption{\genetreeexplanation{\textit{GPC3}}}
 \label{fig:gpc3_evolution_tree}
@@ -680,18 +653,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}[hbf]
 <<fstl1.evolution.tree,echo=FALSE,out.height="0.6\\textheight",fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="FSTL1" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,
-                 gene.tree.expression,
-                 min.fpkm=1,
-                 axis.text.size=3.5,
-                 fontsize=5
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="FSTL1"
+                                                    & species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=5,color="black",fontface="italic")+xlim(0,3))
 @ 
 \caption{\genetreeexplanation{follistatin-like 1 \textit{FSTL1}}}
 \label{fig:fstl1_evolution_tree}
@@ -704,17 +672,15 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}[hbf]
 <<serpine.evolution.tree,echo=FALSE,out.height="0.6\\textheight",fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="SERPINE2" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,
-                 gene.tree.expression,
-                 min.fpkm=1,
-                 axis.text.size=3.5,
-                 fontsize=3)
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="SERPINE2"
+                                                    & species=="homo sapiens"),
+                                subtree=c("ENSBTAG00000008717",
+                                          "ENSMODG00000004913"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=4,color="black",fontface="italic")+xlim(0,0.8))
 @ 
 \caption{\genetreeexplanation{\textit{SERPINE2}}}
 \label{fig:serpine_evolution_tree}
@@ -723,15 +689,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<sslp1.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_id=="ENSCAFG00000010638" & species=="canis familiaris",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 axis.text.size=3.5,
-                 fontsize=5)
+print(plot.ancestral.state.tree(gene_selector=quote(gene_id=="ENSCAFG00000010638" &
+                                                    species=="canis familiaris"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,1.2))
 @ 
 \caption{\genetreeexplanation{\textit{SSLP1}}}
 \label{fig:sslp1_evolution_tree}
@@ -740,15 +704,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<estrogen.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="CYP19A1" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 axis.text.size=3.5,
-                 fontsize=4.5)
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="CYP19A1"
+                                                    & species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.37))
 @ 
 \caption{\genetreeexplanation{estrogen synthesis genes}}
 \label{fig:estrogen_evolution_tree}
@@ -757,17 +719,14 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<progesterone.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="HSD3B1" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 subtree=c("ENSMODG00000005385","ENSLAFG00000027896"),
-                 axis.text.size=3.5,
-                 fontsize=4.5
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="HSD3B1"
+                                                    & species=="homo sapiens"),
+                                subtree=c("ENSMODG00000005385","ENSLAFG00000027896"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.6))
 @ 
 \caption{\genetreeexplanation{progesterone synthesis genes}}
 \label{fig:progesterone_evolution_tree}
@@ -776,15 +735,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<chorionic.somatomammotropin.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="CSH1" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 axis.text.size=3.5,
-                 fontsize=4)
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="CSH1"
+                                                    & species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.9))
 @ 
 \caption{\genetreeexplanation{chorionic somatomammotropin}}
 \label{fig:csh1_evolution_tree}
@@ -793,15 +750,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<prolactin.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="PRL" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 axis.text.size=3.5,
-                 fontsize=3.5)
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="PRL"
+                                                    & species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=3,color="black",fontface="italic")+xlim(0,1))
 @ 
 \caption{\genetreeexplanation{prolactin}}
 \label{fig:prolactin_evolution_tree}
@@ -810,15 +765,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<rln2.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="RLN2" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 axis.text.size=3.5,
-                 fontsize=3.5)
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="RLN2"
+                                                    & species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.8))
 @ 
 \caption{\genetreeexplanation{\textit{RLN2}}}
 \label{fig:rln2_evolution_tree}
@@ -827,16 +780,15 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<ovos2.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree["ENSDNOG00000033320",tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 subtree=c("ENSDNOG00000033320","ENSMODG00000017988"),
-                 axis.text.size=3.5,
-                 fontsize=4)
+
+
+print(plot.ancestral.state.tree(gene_selector=quote(gene_id=="ENSDNOG00000033320"),
+                                subtree=c("ENSDNOG00000033320","ENSMODG00000017988"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=5,color="black",fontface="italic")+xlim(0,1.3))
 @ 
 \caption{\genetreeexplanation{\cow \textit{OVOS2}}}
 \label{fig:ovos2_evolution_tree}
@@ -845,16 +797,14 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<prolactin.receptor.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="PRLR" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 subtree=c("ENSG00000113494","ENSMODG00000020376"),
-                 axis.text.size=3.5,
-                 fontsize=4)
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="PRLR"
+                                                    & species=="homo sapiens"),
+                                subtree=c("ENSG00000113494","ENSMODG00000020376"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.3))
 @ 
 \caption{\genetreeexplanation{prolactin receptor, \textit{PRLR}}}
 \label{fig:prolactin_receptor_evolution_tree}
@@ -864,17 +814,14 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<hoxa11.receptor.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="HOXA11" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 subtree=c("ENSBTAG00000014738","ENSECAG00000013229"),
-                 axis.text.size=3.5,
-                 fontsize=4
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="HOXA11"
+                                                    & species=="homo sapiens"),
+                                subtree=c("ENSBTAG00000014738","ENSECAG00000013229"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.4))
 @ 
 \caption{\genetreeexplanation{\textit{HOXA11}}}
 \label{fig:hoxa11_evolution_tree}
@@ -884,17 +831,15 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<hbe1.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="HBE1" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
-                 gene.tree.table,gene.tree.expression,
-                 subtree=c("ENSBTAG00000037815",
-                           "ENSMUSG00000078621"),
-                 axis.text.size=3.5,
-                 fontsize=4)
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="HBE1"
+                                                    & species=="homo sapiens"),
+                                subtree=c("ENSBTAG00000037815",
+                                          "ENSMUSG00000078621"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=4,color="black",fontface="italic")+xlim(0,0.6))
 @ 
 \caption{\genetreeexplanation{\textit{HBE1}}}
 \label{fig:hbe1_evolution_tree}
@@ -903,15 +848,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),
 \begin{figure}
 <<nppb.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="NPPB" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.tree.expression,
-                 axis.text.size=3.5,
-                 fontsize=6
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="NPPB"
+                                                    & species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.4))
 @ 
 \caption{\genetreeexplanation{\textit{NPPB}}}
 \label{fig:nppb_evolution_tree}
@@ -920,15 +863,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.
 \begin{figure}
 <<nppc.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="NPPC" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.tree.expression,
-                 axis.text.size=3.5,
-                 fontsize=3
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="NPPC"
+                                                    & species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,0.32))
 @ 
 \caption{\genetreeexplanation{\textit{NPPC}}}
 \label{fig:nppc_evolution_tree}
@@ -938,15 +879,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.
 \begin{figure}
 <<galectins.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="LGALS1" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.tree.expression,
-                 axis.text.size=3.5,
-                 fontsize=3.5
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="LGALS1"
+                                                    & species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,1))
 @ 
 \caption{\genetreeexplanation{\textit{LGALS1} and \textit{LGALS2}}}
 \label{fig:galectins_evolution_tree}
@@ -956,15 +895,13 @@ plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.
 \begin{figure}
 <<lgals13.galectins.evolution.tree,echo=FALSE,fig.width=8,fig.height=8,warning=FALSE,message=FALSE>>=
 
-tree.id <-
-    genes.to.tree[combined.fpkm[gene_short_name=="LGALS13" & species=="homo sapiens",gene_id],tree]
-gene.tree.table <- trees[[tree.id]]$table
-gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
-gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
-plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.tree.expression,
-                 axis.text.size=3.5,
-                 fontsize=4.5
-                 )
+print(plot.ancestral.state.tree(gene_selector=quote(gene_short_name=="LGALS13"
+                                                    & species=="homo sapiens"),
+                                genes.to.tree=genes.to.tree,
+                                combined.fpkm=combined.fpkm,
+                                trees=trees
+                                )+
+      geom_tiplab(size=6,color="black",fontface="italic")+xlim(0,1.5))
 @ 
 \caption{\genetreeexplanation{\textit{LGALS13}}}
 \label{fig:galectins_lgals13_evolution_tree}
@@ -1223,7 +1160,7 @@ print(ggplot(cpt.distribution.shape[`Expression (FPKM)` > 0.1,],
                       label=paste0(V1," genes"),override=TRUE),
                   data=cpt.distribution.shape[`Expression (FPKM)` > 10,
                       max(num_genes),`Minimum Expression in`],
-                  show_guide=FALSE,
+                  show.legend=FALSE,
                   hjust=0
                   )
       + guides(color=guide_legend(title="Minimum\nExpression in"))
@@ -1329,7 +1266,7 @@ print(ggplot(cpt.h.distribution.shape[`Expression (FPKM)` > 0.1,],
                       label=paste0(V1," genes"),override=TRUE),
                   data=cpt.h.distribution.shape[`Expression (FPKM)` > 10,
                       max(num_genes),`Minimum Expression in`],
-                  show_guide=FALSE,
+                  show.legend=FALSE,
                   hjust=0
                   )
       + guides(color=guide_legend(title="Minimum\nExpression in"))
