--- a/presentation/placenta_viviparous_presentation.Rnw
+++ b/presentation/placenta_viviparous_presentation.Rnw
@@ -157,8 +157,11 @@ library("tidyr")
 
 @ 
 
-<<source.to.latex,echo=FALSE,message=FALSE,results="hide",cache.extra=tools::md5sum(paste0("../common_r_code/",c("to_latex.R","plot_tree_matrix.R","utility_functions.R")))>>=
-for (a in paste0("../common_r_code/",c("to_latex.R","plot_tree_matrix.R","utility_functions.R"))) {
+<<source.to.latex,echo=FALSE,message=FALSE,results="hide",cache.extra=tools::md5sum(paste0("../common_r_code/",c("to_latex.R","plot_tree_matrix.R","utility_functions.R","plot_ancestral_state_tree.R")))>>=
+for (a in paste0("../common_r_code/",c("to_latex.R","plot_tree_matrix.R",
+                                       "utility_functions.R",
+                                       "plot_ancestral_state_tree.R"
+                                       ))) {
     source(a)
 }
 @ 
@@ -537,6 +540,93 @@ print(ggplot(core.placenta.transcriptome.long[!grepl("(min|median|max)_expressio
               axis.ticks = element_blank(),
               axis.text.y = element_text(face="italic"),
               axis.text.x = element_text(angle = 340, hjust = 0.1, vjust=1,face="italic"))
+      )
+@ 
+\end{figure}
+\end{frame}
+
+\begin{frame}{Core Placenta Transcriptome Shape}
+\begin{figure}
+<<core.placenta.transcriptome.distribution,fig.width=6,fig.height=4,out.height="0.8\\textheight",echo=FALSE,message=FALSE>>=
+num.species <- star.logs.wide[,length(unique(species))]
+calculate.distribution.shape <- 
+    function(min.vector) {
+        min.vector <- sort(min.vector,decreasing=TRUE)
+        temp <- data.table(FPKM=min.vector,num_genes=1:length(min.vector))
+        temp <- temp[order(-num_genes)][!duplicated(FPKM)]
+        return(temp)
+    }
+
+cptg.nh <- core.placenta.transcriptome.genes.shape[!(human_name %in% housekeeping.genes.superset[,gene_short_name])]
+
+cpt.distribution.shape <- 
+    lapply(c("all_expression",
+             "all_but_one_expression",
+             "all_but_two_expression",
+             "all_but_three_expression",
+             "all_but_four_expression"),
+           function(x){
+               calculate.distribution.shape(cptg.nh[,x,with=FALSE][[1]])[,`Minimum Expression in`:=x]
+           })
+fix.expression.names <- function(x){
+    x <- gsub("^all_expression$",
+              paste0(num.species," of ",num.species," species"),
+              x
+              )
+    nc.levels <- paste0(num.species," of ",num.species," species")
+    ## number coutner
+    nc <- c("one"=1,"two"=2,"three"=3,"four"=4)
+    for (a in names(nc)) {
+        x <- gsub(paste0("^all_but_",a,"_expression$"),
+              paste0(num.species-nc[a]," of ",num.species," species"),
+              x
+              )
+        nc.levels <-
+            c(nc.levels,
+              paste0(num.species-nc[a]," of ",num.species," species"))
+    }
+    return(factor(x,levels=nc.levels))
+}
+
+cpt.distribution.shape <- 
+    rbindlist(cpt.distribution.shape)
+
+cpt.distribution.shape <- 
+    cpt.distribution.shape[,`Minimum Expression in`:=
+                                fix.expression.names(`Minimum Expression in`)]
+
+setnames(cpt.distribution.shape,
+         "FPKM",
+         "Expression (FPKM)")
+
+print(ggplot(cpt.distribution.shape[`Expression (FPKM)` > 0.1,],
+             aes(x=`Expression (FPKM)`,color=`Minimum Expression in`,y=num_genes))
+      + geom_line(lwd=1)
+      + xlab("Minimum Expression cutoff (FPKM)")
+      + ylab("Genes with N-th Minimum Expression")
+      + scale_y_log10(breaks = trans_breaks("log10", function(x) 10^x),
+                      labels = trans_format("log10", math_format(10^.x)))
+      + scale_x_log10(breaks = trans_breaks("log10", function(x) 10^x),
+                      labels = trans_format("log10", math_format(10^.x)))
+      + geom_vline(xintercept=10)
+      + geom_segment(mapping=aes(y=V1,
+                         yend=V1,
+                         xend=10,
+                         x=1000,
+                         color=`Minimum Expression in`),
+                     data=cpt.distribution.shape[`Expression (FPKM)` > 10,
+                                              max(num_genes),`Minimum Expression in`],
+                     arrow=arrow(length=unit(0.5,"cm"))
+                   )
+      + geom_text(mapping=aes(x=1000,
+                      y=V1,
+                      label=paste0(V1," genes"),override=TRUE),
+                  data=cpt.distribution.shape[`Expression (FPKM)` > 10,
+                      max(num_genes),`Minimum Expression in`],
+                  show.legend=FALSE,
+                  hjust=0
+                  )
+      + guides(color=guide_legend(title="Minimum\nExpression in"))
       )
 @ 
 \end{figure}
