--- a/manuscript/common_latex.tex
+++ b/manuscript/common_latex.tex
@@ -25,17 +25,15 @@
   name corresponding to the human symbol. A complete list of all genes
   is in \cref{#2}.}
 
-\newcommand{\genetreeexplanation}[2][1]{Gene tree and heatmap of
-  expression of genes related to #2. The gene tree was obtained from
-  Ensembl~\cite{Cunningham.ea2015:Ensembl2015} and genes from species
-  not included in this study or having expression by FPKM less than #1
-  were excluded from the plotted tree. Heatmap cells in white are from
-  species where there was no expression of the relevant transcript (or
-  a species where that transcript does not apply). The species names
-  are abbreviated with the first letter of the genus and first two
-  letters of the species (for example, \textit{Homo sapiens} is
-  \textit{H.sa.}). Genes with duplicate gene names in the same species
-  (or no gene named defined) are listed by the Ensemble gene ID.}
+\newcommand{\genetreeexplanation}[2][1]{Gene tree showing expression
+  and ancestral expression of genes related to #2. The gene tree was
+  obtained from Ensembl~\cite{Cunningham.ea2015:Ensembl2015} and genes
+  from species not included in this study were excluded from the
+  plotted tree. The coloring of the internal nodes of the plots
+  indicates the ancestral expression as estimated by fastAnc using
+  phylotools. Genes with duplicate gene names in the same species (or
+  no gene named defined) are listed by the Ensemble gene ID with
+  leading zeros elided.}
 
 \newcommand{\lineagetableexplanation}[3]%
 [A two-sided t test was used to calculate p values.]{%
